# nightly

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-bump-tap.yml
.nightly/: README.md  config.yml  config.yml.example
.planning/: README.md  brainstorm.html  marketing-headlines.md
.planning/rfcs/: 001-cascade-aware-of-open-prs.md  002-worktree-readiness.md  003-vault-knowledge-graph.md  004-worktree-policy.md  005-interactive-seed-to-accepted-rfc.md  006-compact-on-rfc-prep.md  007-model-tier-routing.md  008-pre-rfc-completion-check.md  009-synthesis-driven-ideate.md  010-respawn-supervisor.md  011-interactive-context-compaction.md
packaging/distribution/: nightly.rb
